syntax = "proto3";
package Protocol;

enum PlayerType
{
	PLAYER_TYPE_NONE = 0;
	PLAYER_TYPE_CLIENT = 1;
	PLAYER_TYPE_LV1 = 2;
	PLAYER_TYPE_LV2 = 3;
	PLAYER_TYPE_LV3 = 4;
	PLAYER_TYPE_LV4 = 5;
	PLAYER_TYPE_DUMMY = 6;
}

enum GetType
{
	PLAYER_INFO = 0;
	INVENTORY_INFO = 1;
	EQUIPMENT_INFO = 2;
}

enum InventoryTab {
	INVENTORY_TAB_NONE = 0;
	EQUIP = 1;
	CONSUME = 2;
	MISC = 3;
}

enum EquipmentSlot {
	EQUIPMENTSLOT_NONE = 0;
	WEAPON = 1;
	HELMET = 2;
	TOP = 3;
	BOTTOM = 4;
}